force-app/main/default/objects/Forms__c/Forms__c.object-meta.xml
<CustomObject>
    <label>Forms</label>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>