force-app/main/default/objects/Forms__c/fields/All_Dependents_Listed__c.field-meta.xml
<CustomField>
    <fullName>All_Dependents_Listed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Dependents Listed?</label>
    <type>Checkbox</type>
</CustomField>