force-app/main/default/objects/Forms__c/fields/Child_1_Age__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Age__c</fullName>
    <label>Child #1 Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>