force-app/main/default/objects/Forms__c/fields/Child_2_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Child_2_Date_of_Birth__c</fullName>
    <label>Child #2 Date of Birth</label>
    <type>Date</type>
</CustomField>