force-app/main/default/objects/Forms__c/fields/Child_2_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_2_Last_Name__c</fullName>
    <label>Child #2 Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>