force-app/main/default/objects/Forms__c/fields/Child_3_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_3_First_Name__c</fullName>
    <label>Child #3 First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>