force-app/main/default/objects/Forms__c/fields/Household_Account__c.field-meta.xml
<CustomField>
    <fullName>Household_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <type>Lookup</type>
</CustomField>