force-app/main/default/objects/Forms__c/fields/Parent_Guardian_City__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_City__c</fullName>
    <label>Parent/Guardian City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>