force-app/main/default/objects/Forms__c/fields/Parent_Guardian_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Relationship__c</fullName>
    <label>Parent/Guardian Relationship</label>
    <length>50</length>
    <type>Text</type>
</CustomField>