force-app/main/default/objects/Forms__c/fields/Parent_Guardian_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Zip_Code__c</fullName>
    <label>Parent/Guardian Zip Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>