force-app/main/default/objects/Forms__c/fields/Photo_Release_Initials__c.field-meta.xml
<CustomField>
    <fullName>Photo_Release_Initials__c</fullName>
    <label>Photo Release Initials</label>
    <length>3</length>
    <type>Text</type>
</CustomField>