force-app/main/default/objects/Forms__c/fields/Release_of_Information_Initials__c.field-meta.xml
<CustomField>
    <fullName>Release_of_Information_Initials__c</fullName>
    <label>Release of Information Initials</label>
    <length>3</length>
    <type>Text</type>
</CustomField>