force-app/main/default/objects/Forms__c/recordTypes/General_Release_Form.recordType-meta.xml
<RecordType>
    <fullName>General_Release_Form</fullName>
    <active>true</active>
    <label>General Release Form</label>
</RecordType>