force-app/main/default/objects/Forms__c/recordTypes/General_Release_Form_Bday_and_Workshop.recordType-meta.xml
<RecordType>
    <fullName>General_Release_Form_Bday_and_Workshop</fullName>
    <active>true</active>
    <label>General Release Form - Bday and Workshop</label>
</RecordType>