force-app/main/default/objects/Forms__c/recordTypes/Intake_Form_Layout.recordType-meta.xml
<RecordType>
    <fullName>Intake_Form_Layout</fullName>
    <active>true</active>
    <label>Intake Form Layout</label>
</RecordType>